# Automacrab

./: Cargo.toml
src/: main.rs
src/commands/: meta.rs  mod.rs  music.rs
