[package]
name = "automacrab"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
songbird = "0.1"

[dependencies.serenity]
version = "0.10"
features = ["client", "cache", "framework", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.8"
features = ["macros", "signal", "rt-multi-thread"]
